// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Layout matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-e2rbjw"
  >
    <a
      class="css-pershk"
      data-skip-nav-link=""
      href="#skip-nav-content"
      tabindex="0"
    >
      Skip to content
    </a>
    <header
      role="banner"
    >
      <div
        class="css-1916vvp"
      >
        <div
          class="css-17dzpzi"
        >
          <div
            class="css-7xu00p"
          >
            <a
              aria-current="page"
              class="css-1wdhl9p"
              href="/"
            >
              Test Site
            </a>
            <div
              class="css-9cpsy"
            >
              <button
                aria-label="Toggle color mode"
                aria-pressed="false"
                class="theme-toggle"
                data-testid="dark-mode-toggle"
                duration="750"
                id="theme-toggle"
                type="button"
              >
                Mock Expand
              </button>
            </div>
          </div>
          <div
            class="css-3uks8f"
          >
            <nav
              role="navigation"
            />
          </div>
        </div>
      </div>
    </header>
    <main
      role="main"
    >
      <div
        data-skip-nav-content=""
        id="skip-nav-content"
        style="outline: none;"
        tabindex="-1"
      />
      <div>
        Test content
      </div>
    </main>
    <footer
      class="css-2xzuv0"
      id="footer"
      role="contentinfo"
    >
      <div
        class="css-13vusp9"
      >
        <div
          class="css-1jhg6p1"
        >
          <div
            class="css-1hl8ss2"
          >
            <div
              class="css-1a85y5n"
            >
              Connect with me
            </div>
            <div
              class="css-codtt7"
            >
              <a
                class="css-1srm7sz"
                rel="me"
              />
            </div>
          </div>
          <div
            class="css-k5zx4s"
          >
            <span>
              <a
                class="css-4d1obe"
                href="/rss.xml"
              >
                Subscribe via RSS
              </a>
            </span>
             | 
            <span>
              <a
                href="/privacy"
              >
                Privacy Policy
              </a>
            </span>
             | 
            <span>
              <a
                href="https://github.com/chrisvogt/gatsby-theme-chronogrove"
              >
                View Source
              </a>
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Layout renders with audio player hidden state 1`] = `
<DocumentFragment>
  <div
    class="css-e2rbjw"
  >
    <a
      class="css-pershk"
      data-skip-nav-link=""
      href="#skip-nav-content"
      tabindex="0"
    >
      Skip to content
    </a>
    <header
      role="banner"
    >
      <div
        class="css-1916vvp"
      >
        <div
          class="css-17dzpzi"
        >
          <div
            class="css-7xu00p"
          >
            <a
              aria-current="page"
              class="css-1wdhl9p"
              href="/"
            >
              Test Site
            </a>
            <div
              class="css-9cpsy"
            >
              <button
                aria-label="Toggle color mode"
                aria-pressed="false"
                class="theme-toggle"
                data-testid="dark-mode-toggle"
                duration="750"
                id="theme-toggle"
                type="button"
              >
                Mock Expand
              </button>
            </div>
          </div>
          <div
            class="css-3uks8f"
          >
            <nav
              role="navigation"
            />
          </div>
        </div>
      </div>
    </header>
    <main
      role="main"
    >
      <div
        data-skip-nav-content=""
        id="skip-nav-content"
        style="outline: none;"
        tabindex="-1"
      />
      <div>
        Test content without audio player
      </div>
    </main>
    <footer
      class="css-2xzuv0"
      id="footer"
      role="contentinfo"
    >
      <div
        class="css-13vusp9"
      >
        <div
          class="css-1jhg6p1"
        >
          <div
            class="css-1hl8ss2"
          >
            <div
              class="css-1a85y5n"
            >
              Connect with me
            </div>
            <div
              class="css-codtt7"
            >
              <a
                class="css-1srm7sz"
                rel="me"
              />
            </div>
          </div>
          <div
            class="css-k5zx4s"
          >
            <span>
              <a
                class="css-4d1obe"
                href="/rss.xml"
              >
                Subscribe via RSS
              </a>
            </span>
             | 
            <span>
              <a
                href="/privacy"
              >
                Privacy Policy
              </a>
            </span>
             | 
            <span>
              <a
                href="https://github.com/chrisvogt/gatsby-theme-chronogrove"
              >
                View Source
              </a>
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Layout renders with audio player visible state 1`] = `
<DocumentFragment>
  <div
    class="css-e2rbjw"
  >
    <a
      class="css-pershk"
      data-skip-nav-link=""
      href="#skip-nav-content"
      tabindex="0"
    >
      Skip to content
    </a>
    <header
      role="banner"
    >
      <div
        class="css-1916vvp"
      >
        <div
          class="css-17dzpzi"
        >
          <div
            class="css-7xu00p"
          >
            <a
              aria-current="page"
              class="css-1wdhl9p"
              href="/"
            >
              Test Site
            </a>
            <div
              class="css-9cpsy"
            >
              <button
                aria-label="Toggle color mode"
                aria-pressed="false"
                class="theme-toggle"
                data-testid="dark-mode-toggle"
                duration="750"
                id="theme-toggle"
                type="button"
              >
                Mock Expand
              </button>
            </div>
          </div>
          <div
            class="css-3uks8f"
          >
            <nav
              role="navigation"
            />
          </div>
        </div>
      </div>
    </header>
    <main
      role="main"
    >
      <div
        data-skip-nav-content=""
        id="skip-nav-content"
        style="outline: none;"
        tabindex="-1"
      />
      <div>
        Test content with audio player
      </div>
    </main>
    <footer
      class="css-2xzuv0"
      id="footer"
      role="contentinfo"
    >
      <div
        class="css-13vusp9"
      >
        <div
          class="css-1jhg6p1"
        >
          <div
            class="css-1hl8ss2"
          >
            <div
              class="css-1a85y5n"
            >
              Connect with me
            </div>
            <div
              class="css-codtt7"
            >
              <a
                class="css-1srm7sz"
                rel="me"
              />
            </div>
          </div>
          <div
            class="css-k5zx4s"
          >
            <span>
              <a
                class="css-4d1obe"
                href="/rss.xml"
              >
                Subscribe via RSS
              </a>
            </span>
             | 
            <span>
              <a
                href="/privacy"
              >
                Privacy Policy
              </a>
            </span>
             | 
            <span>
              <a
                href="https://github.com/chrisvogt/gatsby-theme-chronogrove"
              >
                View Source
              </a>
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Layout renders with disableMainWrapper prop 1`] = `
<DocumentFragment>
  <div
    class="css-e2rbjw"
  >
    <a
      class="css-pershk"
      data-skip-nav-link=""
      href="#skip-nav-content"
      tabindex="0"
    >
      Skip to content
    </a>
    <header
      role="banner"
    >
      <div
        class="css-1916vvp"
      >
        <div
          class="css-17dzpzi"
        >
          <div
            class="css-7xu00p"
          >
            <a
              aria-current="page"
              class="css-1wdhl9p"
              href="/"
            >
              Test Site
            </a>
            <div
              class="css-9cpsy"
            >
              <button
                aria-label="Toggle color mode"
                aria-pressed="false"
                class="theme-toggle"
                data-testid="dark-mode-toggle"
                duration="750"
                id="theme-toggle"
                type="button"
              >
                Mock Expand
              </button>
            </div>
          </div>
          <div
            class="css-3uks8f"
          >
            <nav
              role="navigation"
            />
          </div>
        </div>
      </div>
    </header>
    <div>
      Test content without main wrapper
    </div>
    <footer
      class="css-2xzuv0"
      id="footer"
      role="contentinfo"
    >
      <div
        class="css-13vusp9"
      >
        <div
          class="css-1jhg6p1"
        >
          <div
            class="css-1hl8ss2"
          >
            <div
              class="css-1a85y5n"
            >
              Connect with me
            </div>
            <div
              class="css-codtt7"
            >
              <a
                class="css-1srm7sz"
                rel="me"
              />
            </div>
          </div>
          <div
            class="css-k5zx4s"
          >
            <span>
              <a
                class="css-4d1obe"
                href="/rss.xml"
              >
                Subscribe via RSS
              </a>
            </span>
             | 
            <span>
              <a
                href="/privacy"
              >
                Privacy Policy
              </a>
            </span>
             | 
            <span>
              <a
                href="https://github.com/chrisvogt/gatsby-theme-chronogrove"
              >
                View Source
              </a>
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Layout renders with hideFooter prop 1`] = `
<DocumentFragment>
  <div
    class="css-e2rbjw"
  >
    <a
      class="css-pershk"
      data-skip-nav-link=""
      href="#skip-nav-content"
      tabindex="0"
    >
      Skip to content
    </a>
    <header
      role="banner"
    >
      <div
        class="css-1916vvp"
      >
        <div
          class="css-17dzpzi"
        >
          <div
            class="css-7xu00p"
          >
            <a
              aria-current="page"
              class="css-1wdhl9p"
              href="/"
            >
              Test Site
            </a>
            <div
              class="css-9cpsy"
            >
              <button
                aria-label="Toggle color mode"
                aria-pressed="false"
                class="theme-toggle"
                data-testid="dark-mode-toggle"
                duration="750"
                id="theme-toggle"
                type="button"
              >
                Mock Expand
              </button>
            </div>
          </div>
          <div
            class="css-3uks8f"
          >
            <nav
              role="navigation"
            />
          </div>
        </div>
      </div>
    </header>
    <main
      role="main"
    >
      <div
        data-skip-nav-content=""
        id="skip-nav-content"
        style="outline: none;"
        tabindex="-1"
      />
      <div>
        Test content without footer
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Layout renders with hideHeader prop 1`] = `
<DocumentFragment>
  <div
    class="css-e2rbjw"
  >
    <a
      class="css-pershk"
      data-skip-nav-link=""
      href="#skip-nav-content"
      tabindex="0"
    >
      Skip to content
    </a>
    <main
      role="main"
    >
      <div
        data-skip-nav-content=""
        id="skip-nav-content"
        style="outline: none;"
        tabindex="-1"
      />
      <div>
        Test content without header
      </div>
    </main>
    <footer
      class="css-2xzuv0"
      id="footer"
      role="contentinfo"
    >
      <div
        class="css-13vusp9"
      >
        <div
          class="css-1jhg6p1"
        >
          <div
            class="css-1hl8ss2"
          >
            <div
              class="css-1a85y5n"
            >
              Connect with me
            </div>
            <div
              class="css-codtt7"
            >
              <a
                class="css-1srm7sz"
                rel="me"
              />
            </div>
          </div>
          <div
            class="css-k5zx4s"
          >
            <span>
              <a
                class="css-4d1obe"
                href="/rss.xml"
              >
                Subscribe via RSS
              </a>
            </span>
             | 
            <span>
              <a
                href="/privacy"
              >
                Privacy Policy
              </a>
            </span>
             | 
            <span>
              <a
                href="https://github.com/chrisvogt/gatsby-theme-chronogrove"
              >
                View Source
              </a>
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
